[gd_scene load_steps=23 format=2]

[ext_resource path="res://resources/images/Flour.png" type="Texture" id=1]
[ext_resource path="res://resources/images/jar water.png" type="Texture" id=2]
[ext_resource path="res://resources/images/base room.png" type="Texture" id=3]
[ext_resource path="res://resources/images/tableta.png" type="Texture" id=4]
[ext_resource path="res://OutlineTexture.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/scripts/Inventory.gd" type="Script" id=6]
[ext_resource path="res://resources/scripts/DoughTable.gd" type="Script" id=7]
[ext_resource path="res://resources/images/yeast.png" type="Texture" id=8]
[ext_resource path="res://resources/fonts/PIXELADE.TTF" type="DynamicFontData" id=9]
[ext_resource path="res://resources/images/salt.png" type="Texture" id=10]
[ext_resource path="res://ShowValueSlider.gd" type="Script" id=11]
[ext_resource path="res://DoughPreparationDialog.gd" type="Script" id=12]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/inventory border.png-8a999c85f5c40023228a501c6af209d7.stex"

[sub_resource type="DynamicFont" id=2]

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 10
outline_size = 1
outline_color = Color( 0.0941176, 0.0117647, 0.0117647, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://resources/fonts/PIXELADE.TTF"

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://resources/fonts/PIXELADE.TTF"

[sub_resource type="DynamicFont" id=8]
size = 15
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://resources/fonts/PIXELADE.TTF"

[sub_resource type="DynamicFont" id=10]
size = 12
font_data = SubResource( 9 )

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Inventory" type="Polygon2D" parent="."]
visible = false
color = Color( 0.356863, 0.0862745, 0.0862745, 0.905882 )
polygon = PoolVector2Array( 64, 64, 416, 64, 416, 544, 64, 544 )
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="Inventory"]
margin_left = 64.0
margin_top = 64.0
margin_right = 416.0
margin_bottom = 544.0
texture = SubResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="PanelContainer" parent="Inventory"]
margin_left = 96.0
margin_top = 112.0
margin_right = 384.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Inventory/Items"]
margin_left = 7.0
margin_top = 7.0
margin_right = 281.0
margin_bottom = 393.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Inventory/Items/VBoxContainer"]
margin_right = 274.0
margin_bottom = 34.0

[node name="Buy" type="Button" parent="Inventory/Items/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 267.0
margin_bottom = 27.0
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoughTable" type="Node2D" parent="."]
position = Vector2( 426, 324 )
scale = Vector2( 1.36987, 1.58976 )
script = ExtResource( 7 )

[node name="ReferenceRect" type="ReferenceRect" parent="DoughTable"]
visible = false
margin_left = -63.0
margin_top = -33.0
margin_right = 27.0
margin_bottom = -9.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="DoughTable/ReferenceRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.520844
margin_top = -0.149597
margin_right = -0.520844
margin_bottom = -0.149597
theme = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="DoughTable/ReferenceRect/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 83.0
margin_bottom = 17.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
meta_underlined = false
tab_size = 0
text = "Click to prepare Dough"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" parent="DoughTable" instance=ExtResource( 5 )]
margin_left = -64.2397
margin_top = -20.7579
margin_right = 14.7603
margin_bottom = 50.2421
texture = ExtResource( 4 )

[node name="Control" type="Control" parent="DoughTable"]
margin_left = 19.7783
margin_top = -11.5664
margin_right = 54.7783
margin_bottom = 29.4336
rect_scale = Vector2( -2.4, 1.3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="DoughTable"]
visible = true
margin_left = -123.0
margin_top = -94.0
margin_right = 62.0
margin_bottom = 20.0
window_title = "Dough Preparation"
resizable = true
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="DoughTable/AcceptDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 177.0
margin_bottom = 242.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DoughTable/AcceptDialog/MarginContainer"]
margin_right = 169.0
margin_bottom = 238.0

[node name="HPizzaStyleContainer" type="HBoxContainer" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer"]
margin_right = 169.0
margin_bottom = 20.0

[node name="Label2" type="Label" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HPizzaStyleContainer"]
margin_right = 59.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 6 )
text = "Pizza style"
align = 1

[node name="OptionButton" type="OptionButton" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HPizzaStyleContainer"]
margin_left = 63.0
margin_right = 161.0
margin_bottom = 20.0
text = "Neapolitan"
align = 2
items = [ "Neapolitan", null, false, 0, null, "American", null, false, 1, null, "Sicilian", null, false, 2, null ]
selected = 0

[node name="HPizzaSizeContainer" type="HBoxContainer" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 169.0
margin_bottom = 44.0

[node name="Label2" type="Label" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HPizzaSizeContainer"]
margin_right = 56.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 6 )
text = "Pizza size"
align = 1

[node name="OptionButton" type="OptionButton" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HPizzaSizeContainer"]
margin_left = 60.0
margin_right = 124.0
margin_bottom = 20.0
text = "Small"
align = 2
items = [ "Small", null, false, 0, null, "Medium", null, false, 1, null, "Large", null, false, 2, null ]
selected = 0

[node name="HNumberPizzaContainer" type="HBoxContainer" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 169.0
margin_bottom = 72.0

[node name="Label2" type="Label" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HNumberPizzaContainer"]
margin_top = 2.0
margin_right = 101.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "Number of pizzas"
align = 1

[node name="LineEdit" type="LineEdit" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HNumberPizzaContainer"]
margin_left = 105.0
margin_right = 163.0
margin_bottom = 24.0
text = "1"
align = 1
max_length = 2

[node name="HWaterContainer" type="HBoxContainer" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 169.0
margin_bottom = 108.0

[node name="PanelContainer" type="PanelContainer" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HWaterContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="Sprite" type="Sprite" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HWaterContainer/PanelContainer"]
texture = ExtResource( 2 )
centered = false

[node name="PanelPercentage" type="PanelContainer" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HWaterContainer"]
margin_left = 36.0
margin_right = 152.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HWaterContainer/PanelPercentage"]
margin_left = 7.0
margin_top = 7.0
margin_right = 109.0
margin_bottom = 23.0
min_value = 50.0
max_value = 90.0
step = 5.0
value = 50.0
ticks_on_borders = true
script = ExtResource( 11 )

[node name="Label" type="Label" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HWaterContainer"]
margin_left = 156.0
margin_top = 8.0
margin_right = 156.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 8 )

[node name="LabelPercentage3" type="Label" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HWaterContainer"]
margin_left = 160.0
margin_top = 8.0
margin_right = 169.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 8 )
text = "%"

[node name="Label" type="Label" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 169.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 10 )
text = "Ingredients needed:"

[node name="HFlourContainer" type="HBoxContainer" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 169.0
margin_bottom = 162.0

[node name="PanelSprite" type="PanelContainer" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HFlourContainer"]
margin_right = 32.0
margin_bottom = 33.0
rect_min_size = Vector2( 32, 32 )

[node name="Sprite" type="Sprite" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HFlourContainer/PanelSprite"]
texture = ExtResource( 1 )
centered = false

[node name="PanelQuantity" type="PanelContainer" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HFlourContainer"]
margin_left = 36.0
margin_right = 158.0
margin_bottom = 33.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3

[node name="LabelQuantity" type="Label" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HFlourContainer/PanelQuantity"]
margin_left = 7.0
margin_top = 7.0
margin_right = 115.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 6 )
text = "500"
align = 1

[node name="Label" type="Label" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HFlourContainer"]
margin_left = 162.0
margin_top = 7.0
margin_right = 169.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 6 )
text = "g"
align = 1

[node name="HSaltContainer" type="HBoxContainer" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 169.0
margin_bottom = 198.0

[node name="PanelSprite" type="PanelContainer" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HSaltContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="Sprite" type="Sprite" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HSaltContainer/PanelSprite"]
texture = ExtResource( 10 )
centered = false

[node name="PanelQuantity" type="PanelContainer" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HSaltContainer"]
margin_left = 36.0
margin_right = 159.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3

[node name="LabelQuantity" type="Label" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HSaltContainer/PanelQuantity"]
margin_left = 7.0
margin_top = 8.0
margin_right = 116.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 8 )
text = "23"
align = 1

[node name="label" type="Label" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HSaltContainer"]
margin_left = 163.0
margin_top = 8.0
margin_right = 169.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 8 )
text = "g"

[node name="HYeastContainer" type="HBoxContainer" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer"]
margin_top = 202.0
margin_right = 169.0
margin_bottom = 234.0

[node name="PanelSprite" type="PanelContainer" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HYeastContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="Sprite" type="Sprite" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HYeastContainer/PanelSprite"]
texture = ExtResource( 8 )
centered = false

[node name="PanelQuantity" type="PanelContainer" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HYeastContainer"]
margin_left = 36.0
margin_right = 159.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3

[node name="LabelQuantity" type="Label" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HYeastContainer/PanelQuantity"]
margin_left = 7.0
margin_top = 8.0
margin_right = 116.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 8 )
text = "3"
align = 1

[node name="LabelPercentage" type="Label" parent="DoughTable/AcceptDialog/MarginContainer/VBoxContainer/HYeastContainer"]
margin_left = 163.0
margin_top = 8.0
margin_right = 169.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 8 )
text = "g"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="base room" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 488, 342 )
scale = Vector2( 2.17773, 2.225 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
[connection signal="button_down" from="Inventory/Items/VBoxContainer/PanelContainer/Buy" to="Inventory" method="_on_Buy_button_down"]
